--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-yellow-50 flex justify-center items-center min-h-screen">
 
     <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
-        <h2 class="text-2xl font-bold text-center text-red-500">🍂 ফাগুনের শুভেচ্ছা চিঠি</h2>
+        <h2 class="text-2xl font-bold text-center text-red-500">🍂চিঠি.com</h2>
 
         <label class="block mt-4 text-gray-700">📌 প্রাপকের নাম:</label>
         <input type="text" id="recipientName" class="w-full p-2 border rounded-lg mt-1" placeholder="প্রাপকের নাম লিখুন">
