add new feature

--- a/index.html
+++ b/index.html
@@ -35,37 +35,93 @@
     </div>
 
     <script>
-        function generateLetter() {
-            let recipientName = document.getElementById("recipientName").value || "প্রিয় বন্ধু";
-            let yourName = document.getElementById("yourName").value || "আপনার নাম";
-            let message = document.getElementById("message").value || "তোমার সাথে আবার দেখা করার অপেক্ষায় আছি।";
+       function generateLetter() {
+    let recipientName = document.getElementById("recipientName").value || "প্রিয় বন্ধু";
+    let yourName = document.getElementById("yourName").value || "আপনার নাম";
+    let message = document.getElementById("message").value || "তোমার সাথে আবার দেখা করার অপেক্ষায় আছি।";
 
-            let letterTemplate = `
-প্রিয় ${recipientName},  
+    // বিভিন্ন চিঠির টেমপ্লেট
+    let letterTemplates = [
+        `প্রিয় ${recipientName},  
 
 ফাগুনের রঙিন শুভেচ্ছা তোমার জন্য! 🌸🍃  
 
 এই ঋতুর হালকা মিষ্টি বাতাস, কোকিলের সুর, আর শিমুল-পলাশের লাল আভা যেন আমাদের হৃদয়ে ভালোবাসার এক নতুন স্পন্দন জাগিয়ে তোলে।  
 
-অনেক দিন ধরে তোমার কোনো খবর পাইনি, তাই এই চিঠি লিখছি। জীবনের এই ছোট ছোট মুহূর্তগুলোই তো আমাদের স্মৃতির পাতায় অমূল্য হয়ে থাকে। তুমি কেমন আছো? আশা করি, তোমার দিনগুলো ভালো কাটছে, আর তোমার হাসি আগের মতোই রঙিন রয়েছে।  
+অনেক দিন ধরে তোমার কোনো খবর পাইনি, তাই এই চিঠি লিখছি। জীবন কেমন কাটছে তোমার? আশা করি, সব ভালোই চলছে।  
 
 ${message}  
 
-ফুলের সুবাস আর ফাগুনের হাওয়া তোমার মনকে আরও প্রফুল্ল করুক। শীঘ্রই দেখা হবে, এই প্রত্যাশায় রইলাম।  
+শীঘ্রই দেখা হবে, এই প্রত্যাশায়।  
 
 শুভেচ্ছাসহ,  
 ${yourName}  
-            `;
+        `,
 
-            document.getElementById("letterOutput").value = letterTemplate;
-        }
+        `প্রিয় ${recipientName},  
 
-        function copyToClipboard() {
-            let letterText = document.getElementById("letterOutput");
-            letterText.select();
-            document.execCommand("copy");
-            alert("📋 চিঠি কপি হয়েছে!");
-        }
+আশা করি, তুমি ভালো আছো! আজ হঠাৎ করেই তোমার কথা মনে পড়ল। তাই ভাবলাম, একটা চিঠি লিখে ফেলি।  
+
+জীবনের ছোট ছোট মুহূর্তগুলোই আমাদের জন্য আসল সম্পদ। তোমার সাথে কাটানো মুহূর্তগুলোও ঠিক তেমনই অমূল্য।  
+
+${message}  
+
+সময় সুযোগ হলে উত্তর দিও। তোমার চিঠির অপেক্ষায় থাকলাম!  
+
+স্নেহ ও শুভেচ্ছা,  
+${yourName}  
+        `,
+
+        `প্রিয় ${recipientName},  
+
+আজকের বিকেলটা একটু অন্যরকম। তাই ভাবলাম, তোমাকে একটা চিঠি লিখি। চিঠির মাধ্যমে অনুভূতি প্রকাশ করাটা এখন একটু কম হয়, তাই না? কিন্তু কিছু অনুভূতি শুধু লিখেই বোঝানো যায়।  
+
+তুমি কেমন আছো? জানি না, কবে আবার দেখা হবে। কিন্তু আশা করি, তোমার জীবন সুখ ও আনন্দে ভরপুর থাকুক।  
+
+${message}  
+
+আবার দেখা হবে, এই আশায়।  
+
+শুভেচ্ছাসহ,  
+${yourName}  
+        `,
+
+        `প্রিয় ${recipientName},  
+
+তোমার কথা মনে পড়ছে। তাই এই চিঠিটা লিখলাম। জীবন কখনো কখনো আমাদের ব্যস্ত করে ফেলে, কিন্তু কিছু সম্পর্ক সবসময় অটুট থাকে।  
+
+তুমি ভালো থেকো, হাসি-খুশি থেকো।  
+
+${message}  
+
+শুভ কামনা রইল!  
+
+স্নেহসহ,  
+${yourName}  
+        `,
+
+        `প্রিয় ${recipientName},  
+
+তোমার জন্য এই চিঠি। এই লেখা পড়ে একটু হলেও যদি তোমার মুখে হাসি ফুটে, সেটাই হবে আমার পাওয়া।  
+
+আমাদের জীবনে কিছু সম্পর্ক থাকে, যেগুলো সময়ের সঙ্গে বদলায় না। তুমি সবসময় ভালো থাকো, সুখে থাকো।  
+
+${message}  
+
+ভালো থেকো সবসময়!  
+
+তোমার বন্ধু,  
+${yourName}  
+        `
+    ];
+
+    // র‍্যান্ডমলি একটি চিঠি নির্বাচন
+    let randomIndex = Math.floor(Math.random() * letterTemplates.length);
+    let selectedLetter = letterTemplates[randomIndex];
+
+    document.getElementById("letterOutput").value = selectedLetter;
+}
+
     </script>
 
 </body>
