add all featers

--- a/index.html
+++ b/index.html
@@ -9,16 +9,29 @@
 <body class="bg-yellow-50 flex justify-center items-center min-h-screen">
 
     <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
-        <h2 class="text-2xl font-bold text-center text-red-500">🍂চিঠি.com</h2>
+        <h2 class="text-2xl font-bold text-center text-red-500">🍂 চিঠি.com</h2>
 
         <label class="block mt-4 text-gray-700">📌 প্রাপকের নাম:</label>
-        <input type="text" id="recipientName" class="w-full p-2 border rounded-lg mt-1" placeholder="প্রাপকের নাম লিখুন">
+        <input type="text" id="recipientName" class="w-full p-2 border rounded-lg mt-1" placeholder="যার উদ্দেশ্যে লিখছেন">
 
         <label class="block mt-4 text-gray-700">👤 আপনার নাম:</label>
-        <input type="text" id="yourName" class="w-full p-2 border rounded-lg mt-1" placeholder="আপনার নাম লিখুন">
+        <input type="text" id="yourName" class="w-full p-2 border rounded-lg mt-1" placeholder="আপনার নাম (যিনি লিখছেন)">
+
+        <label class="block mt-4 text-gray-700">💬 ভাষার ধরন:</label>
+        <select id="languageType" class="w-full p-2 border rounded-lg mt-1">
+            <option value="tumi">তুমি</option>
+            <option value="apni">আপনি</option>
+        </select>
 
         <label class="block mt-4 text-gray-700">✉️ আপনার বার্তা:</label>
-        <input type="text" id="message" class="w-full p-2 border rounded-lg mt-1" placeholder="বার্তা লিখুন (ঐচ্ছিক)">
+        <input type="text" id="message" class="w-full p-2 border rounded-lg mt-1" placeholder="আপনার বার্তাটি এখানে লিখুন...">
+
+        <label class="block mt-4 text-gray-700">📝 চিঠির ধরন বেছে নিন:</label>
+        <select id="letterType" class="w-full p-2 border rounded-lg mt-1">
+            <option value="romantic">প্রেমময় চিঠি</option>
+            <option value="friendship">বন্ধুত্বের চিঠি</option>
+            <option value="formal">শ্রদ্ধা ও শুভেচ্ছা চিঠি</option>
+        </select>
 
         <button onclick="generateLetter()" 
             class="mt-4 w-full bg-red-500 text-white py-2 rounded-lg hover:bg-red-600 transition">
@@ -35,94 +48,178 @@
     </div>
 
     <script>
-       function generateLetter() {
-    let recipientName = document.getElementById("recipientName").value || "প্রিয় বন্ধু";
-    let yourName = document.getElementById("yourName").value || "আপনার নাম";
-    let message = document.getElementById("message").value || "তোমার সাথে আবার দেখা করার অপেক্ষায় আছি।";
+        function generateLetter() {
+            let recipientName = document.getElementById("recipientName").value || "প্রিয় বন্ধু";
+            let yourName = document.getElementById("yourName").value || "আপনার নাম";
+            let message = document.getElementById("message").value || "তোমার সাথে আবার দেখা করার অপেক্ষায় আছি।";
+            let languageType = document.getElementById("languageType").value;
+            let letterType = document.getElementById("letterType").value;
 
-    // বিভিন্ন চিঠির টেমপ্লেট
-    let letterTemplates = [
-        `প্রিয় ${recipientName},  
+            let templates = {
+                "tumi": {
+                    "romantic": [
+                        `প্রিয় ${recipientName},  
 
-ফাগুনের রঙিন শুভেচ্ছা তোমার জন্য! 🌸🍃  
+ফাগুনের মিষ্টি হাওয়া তোমাকে ভালোবাসার বার্তা পৌঁছাক! 🌸🍃  
 
-এই ঋতুর হালকা মিষ্টি বাতাস, কোকিলের সুর, আর শিমুল-পলাশের লাল আভা যেন আমাদের হৃদয়ে ভালোবাসার এক নতুন স্পন্দন জাগিয়ে তোলে।  
-
-অনেক দিন ধরে তোমার কোনো খবর পাইনি, তাই এই চিঠি লিখছি। জীবন কেমন কাটছে তোমার? আশা করি, সব ভালোই চলছে।  
-
-${message}  
-
-শীঘ্রই দেখা হবে, এই প্রত্যাশায়।  
-
-শুভেচ্ছাসহ,  
-${yourName}  
-        `,
-
-        `প্রিয় ${recipientName},  
-
-আশা করি, তুমি ভালো আছো! আজ হঠাৎ করেই তোমার কথা মনে পড়ল। তাই ভাবলাম, একটা চিঠি লিখে ফেলি।  
-
-জীবনের ছোট ছোট মুহূর্তগুলোই আমাদের জন্য আসল সম্পদ। তোমার সাথে কাটানো মুহূর্তগুলোও ঠিক তেমনই অমূল্য।  
+তোমার প্রতিটি কথা, প্রতিটি মুহূর্ত যেন আমার হৃদয়ে এক গভীর ছাপ রেখে যায়। আজও তোমার ভাবনায় আমি হারিয়ে যাচ্ছি। আমাদের ভালোবাসা যেন সাগরের মতো বিশাল, গভীর এবং চিরকাল প্রবাহিত। তুমি ছাড়া পৃথিবীটা অচেনা, অজানা। তোমার হাসি, তোমার উপস্থিতি, তোমার শব্দ—সব কিছুই আমার জীবনকে আরও সুন্দর করে তোলে।  
 
 ${message}  
 
-সময় সুযোগ হলে উত্তর দিও। তোমার চিঠির অপেক্ষায় থাকলাম!  
+শীঘ্রই তোমার সাথে আবার দেখা হবে, সেই মুহূর্তে আমি তোমাকে আরও বেশি ভালোবাসতে চাই।  
 
-স্নেহ ও শুভেচ্ছা,  
+ভালোবাসা,  
 ${yourName}  
-        `,
+                        `,
+                        `প্রিয় ${recipientName},  
 
-        `প্রিয় ${recipientName},  
-
-আজকের বিকেলটা একটু অন্যরকম। তাই ভাবলাম, তোমাকে একটা চিঠি লিখি। চিঠির মাধ্যমে অনুভূতি প্রকাশ করাটা এখন একটু কম হয়, তাই না? কিন্তু কিছু অনুভূতি শুধু লিখেই বোঝানো যায়।  
-
-তুমি কেমন আছো? জানি না, কবে আবার দেখা হবে। কিন্তু আশা করি, তোমার জীবন সুখ ও আনন্দে ভরপুর থাকুক।  
+তোমার সাথে কাটানো প্রতিটি মুহূর্ত আমার জীবনের সেরা স্মৃতি। তোমার হাসি, তোমার কথা—সবই আমার জন্য অমূল্য। তুমি ছাড়া আমি কিছুই ভাবতে পারি না। তোমার স্মৃতি, তোমার কথা, তোমার হাসি—এগুলো আমার প্রতিদিনের শক্তি।  
 
 ${message}  
 
-আবার দেখা হবে, এই আশায়।  
+আমার মন, আমার হৃদয় সব কিছু তোমার জন্য অপেক্ষা করছে। আমাদের সম্পর্ক যেন কোনো বাধা ছাড়াই অবিচল থাকে।  
 
-শুভেচ্ছাসহ,  
+ভালোবাসা সহ,  
 ${yourName}  
-        `,
+                        `
+                    ],
+                    "friendship": [
+                        `প্রিয় ${recipientName},  
 
-        `প্রিয় ${recipientName},  
-
-তোমার কথা মনে পড়ছে। তাই এই চিঠিটা লিখলাম। জীবন কখনো কখনো আমাদের ব্যস্ত করে ফেলে, কিন্তু কিছু সম্পর্ক সবসময় অটুট থাকে।  
-
-তুমি ভালো থেকো, হাসি-খুশি থেকো।  
+তুমি কি জানো, তুমি আমার জীবনের সবচেয়ে ভালো বন্ধু? আমাদের বন্ধুত্বের যে গল্প, তা এক কথায় বলার মতো নয়। আমি জানি, যেখানেই যাই, তোমার বন্ধু হয়ে থাকতে পারা আমার জীবনের এক বড় প্রাপ্তি। তুমিই তো আমার জীবনের সেই মানুষ, যার সঙ্গে আমি সব সুখ-দুঃখ ভাগাভাগি করি।  
 
 ${message}  
 
-শুভ কামনা রইল!  
+তুমি যখন হাসো, পৃথিবীটা যেন আলোয় ভরে যায়, আর আমি জানি, আমাদের বন্ধুত্ব চিরকাল অটুট থাকবে।  
 
-স্নেহসহ,  
+বন্ধুত্বের সাথে,  
 ${yourName}  
-        `,
+                        `,
+                        `প্রিয় ${recipientName},  
 
-        `প্রিয় ${recipientName},  
-
-তোমার জন্য এই চিঠি। এই লেখা পড়ে একটু হলেও যদি তোমার মুখে হাসি ফুটে, সেটাই হবে আমার পাওয়া।  
-
-আমাদের জীবনে কিছু সম্পর্ক থাকে, যেগুলো সময়ের সঙ্গে বদলায় না। তুমি সবসময় ভালো থাকো, সুখে থাকো।  
+আজ আবার মনে পড়ল আমাদের সেই মজার দিনের কথা। তুমি আমার জীবনে অনেক কিছু এনেছ, সেই জন্য আমি চিরকাল কৃতজ্ঞ। তোমার বন্ধু হয়ে থাকার অনুভূতি আমার হৃদয়ে চিরকাল থাকবে। আমাদের স্মৃতি যেন কখনো মুছে না যায়।  
 
 ${message}  
 
-ভালো থেকো সবসময়!  
+শীঘ্রই আবার দেখা হবে, বন্ধু।  
 
-তোমার বন্ধু,  
+বন্ধুত্বসহ,  
 ${yourName}  
-        `
-    ];
+                        `
+                    ],
+                    "formal": [
+                        `শ্রদ্ধেয় ${recipientName},  
 
-    // র‍্যান্ডমলি একটি চিঠি নির্বাচন
-    let randomIndex = Math.floor(Math.random() * letterTemplates.length);
-    let selectedLetter = letterTemplates[randomIndex];
+আপনাকে শ্রদ্ধা ও শুভেচ্ছা জানাচ্ছি। অনেক দিন হলো আপনার সাথে যোগাযোগ নেই, তাই ভাবলাম, একটি চিঠি পাঠাই।  
 
-    document.getElementById("letterOutput").value = selectedLetter;
-}
+${message}  
 
+আপনার সুস্থতা ও মঙ্গল কামনা করছি। আমার প্রার্থনা সবসময় আপনার সাথে।  
+
+শ্রদ্ধাসহ,  
+${yourName}  
+                        `,
+                        `মান্যবর ${recipientName},  
+
+আপনার প্রতি শ্রদ্ধা ও শুভেচ্ছা জানাই। আশা করি, আপনি সুস্থ আছেন। এই চিঠি পাঠাচ্ছি আপনাকে জানার জন্য, আপনি কেমন আছেন। আপনার জন্য সব সময় শুভকামনা রইল।  
+
+${message}  
+
+শ্রদ্ধাসহ,  
+${yourName}  
+                        `
+                    ]
+                },
+                "apni": {
+                    "romantic": [
+                        `শ্রদ্ধেয় ${recipientName},  
+
+ফাগুনের সুন্দর বাতাসে আপনাকে ভালোবাসার শুভেচ্ছা জানাচ্ছি। 🌸🍃  
+
+আপনার প্রতিটি কথা, প্রতিটি মুহূর্ত আমার হৃদয়ে গভীর ছাপ রেখে যায়। আপনি ছাড়া আমি জীবনের কোনো দিকেই সঠিকভাবে এগোতে পারি না। আপনার সঙ্গে কাটানো প্রতিটি মুহূর্ত আমার জন্য অমূল্য।  
+
+${message}  
+
+আপনি যখন পাশে থাকেন, মনে হয় জীবন আরও সুন্দর।  
+
+শ্রদ্ধাসহ,  
+${yourName}  
+                        `,
+                        `শ্রদ্ধেয় ${recipientName},  
+
+আপনার প্রতি আমার শ্রদ্ধা, ভালোবাসা এবং কৃতজ্ঞতা। আপনার সাহসিকতা, ভালোবাসা, এবং উষ্ণতা আমাকে প্রতিনিয়ত অনুপ্রাণিত করে। আপনি এক অনন্য ব্যক্তিত্ব, যার উপস্থিতি আমার জীবনকে উজ্জ্বল করে তোলে।  
+
+${message}  
+
+আপনার শুভকামনা রইল।  
+
+শ্রদ্ধাসহ,  
+${yourName}  
+                        `
+                    ],
+                    "friendship": [
+                        `মান্যবর ${recipientName},  
+
+আপনার বন্ধুত্ব সত্যিই অনুপ্রেরণামূলক। আপনি যখন পাশে থাকেন, মনে হয় পৃথিবীটা আরও সুন্দর। আমি আপনার বন্ধুত্বের জন্য চিরকাল কৃতজ্ঞ।  
+
+${message}  
+
+আপনার সঙ্গে কাটানো প্রতিটি মুহূর্ত এক অনন্য স্মৃতি।  
+
+শ্রদ্ধাসহ,  
+${yourName}  
+                        `,
+                        `শ্রদ্ধেয় ${recipientName},  
+
+আপনার বন্ধুত্বের জন্য আমি চিরকাল কৃতজ্ঞ। আজ আবার মনে পড়ল আমাদের সেই স্মরণীয় মুহূর্তগুলোর কথা। আমি জানি, আপনার বন্ধুত্ব আমাকে সারা জীবনের জন্য সমর্থন দেবে।  
+
+${message}  
+
+শ্রদ্ধাসহ,  
+${yourName}  
+                        `
+                    ],
+                    "formal": [
+                        `শ্রদ্ধেয় ${recipientName},  
+
+আপনাকে আমার আন্তরিক শুভেচ্ছা জানাই। আশা করি, আপনি সুস্থ ও ভালো আছেন।  
+
+${message}  
+
+আপনার সুস্থতা ও মঙ্গল কামনা করি।  
+
+শ্রদ্ধাসহ,  
+${yourName}  
+                        `,
+                        `মান্যবর ${recipientName},  
+
+আমি আশা করি আপনি ভালো আছেন। এই চিঠি পাঠাচ্ছি শুধু আপনার খবর নেয়ার জন্য। আপনার প্রতিটি শুভ কামনা আমি মন থেকে কামনা করি।  
+
+${message}  
+
+শ্রদ্ধাসহ,  
+${yourName}  
+                        `
+                    ]
+                }
+            };
+
+            let selectedTemplates = templates[languageType][letterType];
+            let randomIndex = Math.floor(Math.random() * selectedTemplates.length);
+            let selectedLetter = selectedTemplates[randomIndex];
+
+            document.getElementById("letterOutput").value = selectedLetter;
+        }
+
+        function copyToClipboard() {
+            let letterText = document.getElementById("letterOutput");
+            navigator.clipboard.writeText(letterText.value).then(() => {
+                alert("📋 চিঠি কপি হয়েছে!");
+            });
+        }
     </script>
 
 </body>
 </html>
+
+
